# kantar-servisi

./: .gitignore  CHANGELOG.md  KantarServisi.spec  README.md  SECURITY.md  calistir.bat  kantar-cihazi-python3.py  kantar-hizli-kurulum-python3.bat  kantar-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
downloads/: SHA256SUMS.txt  latest.json
kantar_servis/: __init__.py  __main__.py  config.py  desktop.py  errors.py  logging_utils.py  serial_bridge.py  storage.py  updates.py  web.py  windows_bootstrap.py
kantar_servis/static/: __init__.py  app.css  kantarlar.js  loglar.js  serial.js  ui.js
kantar_servis/templates/: __init__.py  base.html  kantar-ayarlar.html  loglar.html  serial.html  sistem.html
kantar_servis/templates/partials/: __init__.py  _alerts.html  _com_ports.html  _header.html  _nav.html  _scale_manager.html  _settings_form.html  _usage_addresses.html
kantar_servisi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
packaging/: windows_entry.py
packaging/windows/: Dockerfile.local  KantarServisi.iss  app.manifest  installer.nsi  launcher.c
scripts/: build_windows_local.py  check_release_tag.py  generate_build_assets.py  windows_installer_smoke_test.ps1  windows_smoke_test.ps1
templates/: base.html  kantar-ayarlar.html  loglar.html  serial.html
templates/partials/: _alerts.html  _nav.html  _profile_select.html  _settings_form.html  _sqlite_info.html  _troubleshooting.html  _usage_addresses.html
tests/: test_config.py  test_desktop.py  test_serial_bridge.py  test_storage.py  test_updates.py  test_web.py  test_windows_packaging.py
